--- a/Style.css
+++ b/Style.css
@@ -1,189 +1,116 @@
 * {
     box-sizing: border-box;
-  }
-  
-  h1 {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    margin-top: 50px;
-    margin-bottom: 70px;
-    font-weight:bold;
-  }
-  
-/** HEADER **/
-   #header-nav {
-    border-radius: 0;
-    border: 0;
-  }
-
-  
-  p {
-    background-color: #35abc9d2 ;
-    margin-right:10px;
-    margin-left: 30px;
-    padding: 10px 10px 5px 15px;
-    height:420px;
-    width:120;
-    font-family: Helvetica;
-    overflow: hidden;
-  }
-  
-  #container {
-    position: relative;
-  }
-
-  .title {
-    background-color: #35abc9d2 ;
-    width:120;
-    padding-top:5px;
-    margin-right:10px;
-    margin-left: 30px;
-    overflow: hidden;
-  }
-
-  /* Simple Responsive Framework. */
-  .row {
-    width: 100%;
-  }
-  
-  /********** Large devices only **********/
-  @media (min-width: 992px) {
-    .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-float: left;
+    margin: 0px;
+}
+body {
+    font-family: 'balsamiq sans';
+}
+h1 {
+    text-align: center;
+    font-size: 250%;
+    margin-top: 10px;
+}
+.navbar-default .navbar-brand {
+    font-size: 250%;
+    color: rgb(0, 0, 0);
+    margin-top: 10px;
 
 }
-.col-lg-1 {
-width: 8.33%;
+h3 {
+    color: black;
+    text-align: center;
+    padding: 15px;
 }
-.col-lg-2 {
-width: 16.66%;
+section {
+    padding: 2%;
+    
 }
-.col-lg-3 {
-width: 25%;
-}
-.col-lg-4 {
-width: 33.33%;
-}
-.col-lg-5 {
-width: 41.66%;
-}
-.col-lg-6 {
-width: 50%;
-}
-.col-lg-7 {
-width: 58.33%;
-}
-.col-lg-8 {
-width: 66.66%;
-}
-.col-lg-9 {
-width: 74.99%;
-}
-.col-lg-10 {
-width: 83.33%;
-}
-.col-lg-11 {
-width: 91.66%;
-}
-.col-lg-12 {
-width: 100%;
+section div { 
+    background-color: rgb(131, 143, 138);
+    border: 2px solid black;
+    padding: 5%;
 }
 
+header {
+    height: auto;
 }
-  
-  /********** Medium devices only **********/
-  @media (min-width: 768px) and (max-width: 991px) {
-    .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-float: left;
-
+a#top {
+ color: rgb(11, 67, 139);
 }
-.col-md-1 {
-width: 8.33%;
+.navbar {
+ background-color: rgb(131, 143, 138);
+ 
 }
-.col-md-2 {
-width: 16.66%;
-}
-.col-md-3 {
-width: 25%;
-}
-.col-md-4 {
-width: 33.33%;
-}
-.col-md-5 {
-width: 41.66%;
-}
-.col-md-6 {
-width: 50%;
-}
-.col-md-7 {
-width: 58.33%;
-}
-.col-md-8 {
-width: 66.66%;
-}
-.col-md-9 {
-width: 74.99%;
-}
-.col-md-10 {
-width: 83.33%;
-}
-.col-md-11 {
-width: 91.66%;
-}
-.col-md-12 {
-width: 100%;
-}
-}
-  
-  /********** Small devices only **********/
-  @media (max-width: 767px) {
-    .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
-float: left;
-
-}
-.col-sm-1 {
-width: 8.33%;
-}
-.col-sm-2 {
-width: 16.66%;
-}
-.col-sm-3 {
-width: 25%;
-}
-.col-sm-4 {
-width: 33.33%;
-}
-.col-sm-5 {
-width: 41.66%;
-}
-.col-sm-6 {
-width: 50%;
-}
-.col-sm-7 {
-width: 58.33%;
-}
-.col-sm-8 {
-width: 66.66%;
-}
-.col-sm-9 {
-width: 74.99%;
-}
-.col-sm-10 {
-width: 83.33%;
-}
-.col-sm-11 {
-width: 91.66%;
-}
-.col-sm-12 {
-width: 100%;
-position: relative;
-min-height: 1px;
-padding-right: 15px;
-padding-left: 15px;
-float: left;
+.navbar-default .navbar-toggle {
+     border-color: rgba(53, 46, 46, 0.829); 
 }
 
-#collapsable-nav a { /* Collapsed nav menu text */
-  font-size: 1.2em;
+.navbar-toggle .icon-bar+.icon-bar {
+    margin-top: 5px;
+}
+.navbar-toggle .icon-bar {
+    width: 32px;
+    height: 4px;
+    
+}
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: rgba(53, 46, 46, 0.829); 
 }
 
+#header-nav {
+    border-radius: 0px;
+    height: 55px;
 }
+
+h2.navbar-header {
+    width: fit-content;
+    float: left;
+    }
+button.navbar-toggle, .navbar-header .icon-bar {
+    border: 1px solid black;
+}
+li {
+    text-align: center;
+    margin: 0px;
+    padding: 5px;
+    color: black;
+    font-size: 20px;
+}
+li:active {
+    background-color: rgba(216, 212, 206, 0.452);
+}
+a:hover {
+    background-color: rgba(216, 212, 206, 0.452);
+}
+.navbar-default .navbar-nav>li>a {
+    color: rgb(7, 7, 7);
+}
+button, input, select, textarea {
+    line-height: 1.5;
+}
+ 
+@media (max-width: 768px) {
+    h2.navbar-header{
+        padding-left: 20px;}
+}
+    
+@media (min-width: 768px) and (max-width: 991px) {
+    .navbar-collapse.collapse {
+        visibility: hidden;
+        display: none;
+      }
+      .navbar {
+          height: 55px;
+      }
+      
+        } 
+@media (min-width: 992px) {
+    .navbar-collapse.collapse {
+        visibility: hidden;
+        display: none;
+        overflow: hidden;
+      }
+      .navbar {
+        height: 55px;
+    }
+} 
